[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "dnnv"
authors = [{ name = "David Shriver", email = "dls2fc@virginia.edu" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
version = "0.6.0"
dynamic = ["description"]
keywords = ["DNN", "neural network", "verification"]
dependencies = [
    "lark~=1.0",
    "numpy>=1.20,<1.22",
    "onnx>=1.8,<1.11",
    "onnxruntime~=1.8",
    "psutil~=5.6",
    "scikit-image>=0.18,<0.19",
    "scipy~=1.7",
    "tensorflow>=2.2,<2.8",
]

[project.optional-dependencies]
all = [
    # default
    "lark~=1.0",
    "numpy>=1.20,<1.22",
    "onnx>=1.8,<1.11",
    "psutil~=5.6",
    "scikit-image>=0.18,<0.19",
    "scipy~=1.7",
    "tensorflow>=2.2,<2.8",
    # test
    "coverage~=5.5",
    "pytest~=6.2",
    "torch~=1.5",
    "torchvision~=0.6",
    # dev
    "black~=22.3",
    "isort~=5.10",
    "mypy~=0.942",
    # docs
    "sphinx",
    "furo",
]
test = ["coverage~=5.5", "pytest~=6.2", "torch~=1.5", "torchvision~=0.6"]
dev = ["black~=22.3", "isort~=5.10", "mypy~=0.942"]
docs = ["sphinx", "furo"]

[project.urls]
Documentation = "https://dnnv.readthedocs.io/en/latest/"
Source = "https://github.com/dlshriver/dnnv"

[project.scripts]
dnnv = "dnnv.__main__:_main"
dnnv_manage = "dnnv._manage.__main__:_main"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
parallel = true
source = ["dnnv"]
omit = [
    "dnnv/__main__.py",
    "dnnv/cli/*",
    "dnnv/logging_utils/*",
    "dnnv/_manage/*",
]

[tool.isort]
profile = "black"
src_paths = ["dnnv", "test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff --verbose --import-mode=importlib"
testpaths = ["tests"]
